refactor: auto_deploy 적용될 branch release로 변경

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -2,7 +2,7 @@ name: issue-tracker auto deploy
 
 on:
   pull_request:
-    branches: ["dev", "release"]
+    branches: [ "release" ]
 
 
 permissions:
