--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     group:
-      local: localDB, jasypt
+      local: localDB, jasypt, oauth
       prod: prodDB, jasypt
       test: testDB, jasypt
     active: local
