feat: github를 통한 oauth 로그인 기능 구현

--- a/be/src/test/resources/application.yml
+++ b/be/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     group:
-      test: testDB, jasypt
+      test: testDB, jasypt, oauth
     active: test
   sql:
     init:
