--- a/be/build.gradle
+++ b/be/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
     //MyBatis 추가
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+
+    // s3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
