--- a/be/build.gradle
+++ b/be/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
     //valid
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
