--- a/be/src/test/resources/application.yml
+++ b/be/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     group:
-      test: testDB, jasypt, oauth, mybatis, aws
+      test: testDB, jasypt, oauth, mybatis, aws, redis
     active: test
   sql:
     init:
