[BE] 자동배포환경 구성을 위한 pr   (#129)
* #114 [BE] login response 수정 (#115)

response에 memberId, nickname, imgUrl을 포함하도록 수정했다.

* #87 [BE] 이슈 필터링 조회 기능 구현   (#113)

* feat: 이슈 필터링 조회 기능 구현

* refactor: Jinny 리뷰 반영

* chore: 배포스크립트에 AWS 생성 추가

* #116[BE] 이슈필터링 기능 리팩토링 (#118)

레이블, 마일스톤, 담당자가 없는 이슈 필터링 기능 구현

* [BE] 파일 전송 기능 구현 (#117)

* chore: 파일 업로드를 위한 환경 설정

* feat: 파일 업로드 기능 구현

* refactor: 코멘트에서 fileUrl 관련 내용 제외

* [BE] 메인페이지 동적 필터 조회 기능 (#122)

* feat: 메인페이지 동적 필터 조회 기능 구현

* chore: EOL 추가

* #119 [BE] 예외처리 구현 (#123)

* refactor: member Service를 Jwt Service로 분리

* refactor: memberRepository 메서드명 수정

* feat: 예외 초기 세팅

* feat: jwtFilter 예외 처리

* feat: 로그인 및 로그아웃 에 관한 예외처리

* feat: Oauth서비스 관련 예외처리

* feat: 토큰관련 Exception 추가

* refactor: 예외 상수명 변경

* feat: 마일스톤 관련 예외 처리

* feat: 레이블 관련 예외 처리

* feat: 코멘트 관련 예외 처리

* feat: organization 관련 예외 처리

* feat: issue관련 예외 처리

* refactor: 쿼리에 집계함수 사용시 Long을 반환하도록 수정

기존엔 Optional<Long> 으로 되어있었는데 집계함수 사용시 결과값이 null이 될 일이 없다. 따라서 Long을 반환하도록 수정한다.

* feat: IncorrectResultSizeDataAccessException handler 추가

* feat: @Valid 를 사용하여 입력값 검증 추가

* refactor: jinny 리뷰 반영

* #105 [BE] 메인페이지 정적 필터 조회 기능 (#124)

* feat: 정적필터 조회기능 구현

* refactor: @Valid 예외 수정 및 comment 삭제기능 리팩토링

* #125 [BE] 로그아웃 기능 구현 (#126)

* feat: redis 초기설정

* feat: 로그아웃 기능 구현

* refactor: Request 에서 token 및 claim 추출 메서드 util 클래스로 생성

* refactor: issue 상세페이지 오류 수정

issue에 milestone 이 지정되있지 않을때 이슈상세페이지에 필요한 데이터를 찾는 부분에서 발생한 오류 수정

* refactor: requestUtil에 불필요한 파싱 삭제

* refactor: 동적필터 필요없는 응답 삭제

---------

Co-authored-by: JeeIn Lee <jinny.l.dev@gmail.com>

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -13,6 +13,7 @@ env:
   FE_WORKING_DIR: ./fe
   NGINX_WORKING_DIR: ./nginx
   APPLICATION_PROPERTIES_FILE_PATH: ./src/main/resources/application.yml
+  AWS_APPLICATION_FILE_PATH: ./src/main/resources/application-aws.yml
 
 jobs:
 
@@ -40,6 +41,8 @@ jobs:
         run: |
           touch '${{ env.APPLICATION_PROPERTIES_FILE_PATH }}'
           echo '${{ secrets.APPLICATION }}' > '${{ env.APPLICATION_PROPERTIES_FILE_PATH }}'
+          touch '${{ env.AWS_APPLICATION_FILE_PATH }}'
+          echo '${{ secrets.AWS_APPLICATION }}' > '${{ env.AWS_APPLICATION_FILE_PATH }}'
 
       # 3. build 단계
       - name: Grant execute permission for gradlew
